infrastructure/k8s/services/fraud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: payflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      containers:
        - name: fraud-service
          image: payflow/fraud-service:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: payflow
spec:
  selector:
    app: fraud-service
  ports:
    - port: 3004
      targetPort: 3004
