infrastructure/k8s/services/ledger-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: payflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-service
  template:
    metadata:
      labels:
        app: ledger-service
    spec:
      containers:
        - name: ledger-service
          image: payflow/ledger-service:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: payflow
spec:
  selector:
    app: ledger-service
  ports:
    - port: 3001
      targetPort: 3001
