infrastructure/k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payflow-ingress
  namespace: payflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: payflow.local
      http:
        paths:
          - path: /v1/payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 3000
          - path: /v1/tenants(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tenant-service
                port:
                  number: 3003
          - path: /health(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tenant-service
                port:
                  number: 3003
